--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <div tabindex="0" role="button" class="btn btn-ghost btn-circle">
                   <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h7" /></svg>
                 </div>
-                <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52 bg-sky-500">
+                <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52 bg-black">
                   <li><a>Homepage</a></li>
                   <li><a>Portfolio</a></li>
                   <li><a>About</a></li>
@@ -43,46 +43,46 @@
           </div>
     </nav>
     <!-- banner code start here  -->
-    <div class="">
+    <div>
       <div class="carousel w-full h-[90vh]">
-        <div id="slide1" class="carousel-item relative w-full bg-no-repeat bg-cover bg-center" style="background-image:linear-gradient(rgba(0, 0, 0, 0.384),rgba(0, 0, 0, 0.301)), url(./image-1/banner.jpg);">
-          <div class="text-white text-center m-auto w-1/2">
+        <div id="slide1" class="carousel-item relative w-full bg-no-repeat bg-cover bg-center" style="background-image:linear-gradient(rgba(14, 13, 13, 0.466),rgba(0, 0, 0, 0.26)), url(./image-1/banner.jpg);">
+          <div class="text-black text-center m-auto w-1/2">
             <h1 class="lg:text-4xl md:text-4xl text-3xl font-semibold">Shoe Store</h1>
-            <p class="lg:text-lg md:text-lg text-sm mt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab impedit modi ipsa perspiciatis voluptatum eligendi enim. Ex aliquam ullam perspiciatis?</p>
-            <button class="bg-white text-black font-semibold px-10 py-1 border-4 border-pink-800 hover:bg-pink-800 hover:text-white duration-300 rounded-md mt-5">Login</button>
+            <p class="lg:text-lg md:text-lg text-sm mt-3 font-semibold">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab impedit modi ipsa perspiciatis voluptatum eligendi enim. Ex aliquam ullam perspiciatis? <br> adipisicing elit.</p>
+            <button class="bg-white text-black font-semibold px-10 py-1 border-4 border-black hover:bg-black hover:text-white duration-300 rounded-md mt-5">Login</button>
           </div>
           <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
             <a href="#slide4" class="btn btn-circle">❮</a> 
             <a href="#slide2" class="btn btn-circle">❯</a>
           </div>
         </div> 
-        <div id="slide2" class="carousel-item relative w-full bg-no-repeat bg-cover bg-center" style="background-image:linear-gradient(rgba(0, 0, 0, 0.384),rgba(0, 0, 0, 0.301)), url(./image-1/banner-2.avif);">
-          <div class="text-white my-auto lg:ml-[750px] md:ml-[60%] mx-auto lg:text-left md:text-left text-center lg:w-1/3 md:w-1/3 w-1/2">
+        <div id="slide2" class="carousel-item relative w-full bg-no-repeat bg-cover bg-center" style="background-image:linear-gradient(rgba(0, 0, 0, 0.432),rgba(0, 0, 0, 0.315)), url(./image-1/banner-2.avif);">
+          <div class="text-black my-auto lg:ml-[750px] md:ml-[60%] mx-auto lg:text-left md:text-left text-center lg:w-1/3 md:w-1/3 w-1/2">
             <h1 class="lg:text-4xl md:text-3xl text-3xl font-semibold">Shoe Store</h1>
             <p class="lg:text-lg md:text-base text-sm mt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab impedit modi ipsa perspiciatis voluptatum eligendi enim. Ex aliquam ullam perspiciatis?</p>
-            <button class="bg-white text-black font-semibold px-10 py-1 border-4 border-indigo-900 hover:bg-indigo-700 hover:text-white duration-300 rounded-md mt-5">Login</button>
+            <button class="bg-white text-black font-semibold px-10 py-1 border-4 border-black hover:bg-black hover:text-white duration-300 rounded-md mt-5">Login</button>
           </div>
           <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
             <a href="#slide1" class="btn btn-circle">❮</a> 
             <a href="#slide3" class="btn btn-circle">❯</a>
           </div>
         </div> 
-        <div id="slide3" class="carousel-item relative w-full bg-no-repeat bg-cover bg-center" style="background-image:linear-gradient(rgba(0, 0, 0, 0.432),rgba(0, 0, 0, 0.226)), url(./image-1/banner-4.avif);">
-          <div class="text-white my-auto lg:ml-28 md:ml-[15%] mx-auto lg:w-2/5 md:w-2/5 w-1/2 lg:text-left md:text-left text-center">
+        <div id="slide3" class="carousel-item relative w-full bg-no-repeat bg-cover bg-center" style="background-image:linear-gradient(rgba(14, 13, 13, 0.384),rgba(0, 0, 0, 0.205)), url(./image-1/banner-4.jpg);">
+          <div class="text-black my-auto lg:ml-28 md:ml-[15%] mx-auto lg:w-2/5 md:w-2/5 w-1/2 lg:text-left md:text-left text-center">
             <h1 class="lg:text-4xl md:text-4xl text-3xl font-semibold">Shoe Store</h1>
             <p class="lg:text-lg md:text-lg text-sm mt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab impedit modi ipsa perspiciatis voluptatum eligendi enim. Ex aliquam ullam perspiciatis?</p>
-            <button class="bg-white text-black font-semibold px-10 py-1 border-4 border-pink-800 hover:bg-pink-800 hover:text-white duration-300 rounded-md mt-5">Login</button>
+            <button class="bg-white text-black font-semibold px-10 py-1 border-4 border-black hover:bg-black hover:text-white duration-300 rounded-md mt-5">Login</button>
           </div>
           <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
             <a href="#slide2" class="btn btn-circle">❮</a> 
             <a href="#slide4" class="btn btn-circle">❯</a>
           </div>
         </div> 
-        <div id="slide4" class="carousel-item relative w-full bg-no-repeat bg-cover bg-center" style="background-image:linear-gradient(rgba(0, 0, 0, 0.384),rgba(0, 0, 0, 0.301)), url(./image-1/banner-5.jpg!sw800);">
-          <div class="text-white my-auto lg:ml-[50%] md:ml-[53%] mx-auto lg:w-2/5 md:w-2/5 w-1/2 lg:text-left md:text-left text-center">
+        <div id="slide4" class="carousel-item relative w-full bg-no-repeat bg-cover bg-center" style="background-image:linear-gradient(rgba(14, 13, 13, 0.384),rgba(224, 221, 221, 0.171)), url(./image-1/banner-5.jpg!sw800);">
+          <div class="text-black my-auto lg:ml-[50%] md:ml-[53%] mx-auto lg:w-2/5 md:w-2/5 w-1/2 lg:text-left md:text-left text-center">
             <h1 class="lg:text-4xl md:text-3xl text-3xl font-semibold">Shoe Store</h1>
             <p class="lg:text-lg md:text-base text-sm mt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab impedit modi ipsa perspiciatis voluptatum eligendi enim. Ex aliquam ullam perspiciatis?</p>
-            <button class="bg-white text-black font-semibold px-10 py-1 border-4 border-indigo-800 hover:bg-indigo-800 hover:text-white duration-300 rounded-md mt-5">Login</button>
+            <button class="bg-white text-black font-semibold px-10 py-1 border-4 border-black hover:bg-black hover:text-white duration-300 rounded-md mt-5">Login</button>
           </div>
           <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
             <a href="#slide3" class="btn btn-circle">❮</a> 
@@ -94,45 +94,12 @@
    </header>
    <main>
     <!-- first section code satrt here -->
-    <section class="mb-20">
-      <div class="grid lg:grid-cols-3 md:grid-cols-2 grid-cols-1 justify-center mt-32 mx-10 gap-9">
-        <!-- card-1 code start  -->
-        <div class="card card-compact bg-base-100 shadow-xl">
-          <figure><img src="./image/card-1.jpg" alt="Shoes" /></figure>
-          <div class="card-body bg-slate-300 rounded-b-xl">
-            <h2 class="card-title">Shoes!</h2>
-            <p>If a dog chews shoes whose shoes does he choose?</p>
-            <div class="card-actions justify-end">
-              <button class="btn btn-primary">Buy Now</button>
-            </div>
-          </div>
-        </div>
-        <!-- card-2 code start  -->
-        <div class="card bg-base-100 shadow-xl">
-          <figure><img src="https://daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg" alt="Shoes" /></figure>
-          <div class="card-body bg-slate-300 rounded-b-xl">
-            <h2 class="card-title">
-              Shoes!
-              <div class="badge badge-secondary">NEW</div>
-            </h2>
-            <p>If a dog chews shoes whose shoes does he choose?</p>
-            <div class="card-actions justify-end">
-              <div class="badge badge-outline">Fashion</div> 
-              <div class="badge badge-outline">Products</div>
-            </div>
-          </div>
-        </div>
-        <!-- card-3 code start  -->
-        <div class="card card-compact bg-base-100 shadow-xl">
-          <figure><img src="./image/card-5.jpeg" alt="Shoes" /></figure>
-          <div class="card-body bg-slate-300 rounded-b-xl">
-            <h2 class="card-title">Shoes!</h2>
-            <p>If a dog chews shoes whose shoes does he choose?</p>
-            <div class="card-actions justify-end">
-              <button class="btn btn-primary">Buy Now</button>
-            </div>
-          </div>
-        </div>
+    <section class="bg-black">
+     <div class="container mx-auto">
+      <div class="">
+        <div class=""></div>
+      </div>
+     </div>
     </section>
     <!-- second section code satrt here -->
     
