--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <!-- cdn file link here  -->
+    <title>Super Steps</title>
+    <!-- tailwind and daisy UI file link here  -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.7.3/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <!-- font awesome file link here  -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
    <!-- header code satrt here -->
@@ -27,7 +29,7 @@
               </div>
             </div>
             <div class="navbar-center">
-              <a class="btn btn-ghost text-3xl">Shoe Store</a>
+              <a class="btn btn-ghost text-3xl">Super Steps</a>
             </div>
             <div class="navbar-end">
               <button class="btn btn-ghost btn-circle lg:flex md:flex hidden">
@@ -36,7 +38,7 @@
               <button class="btn btn-ghost btn-circle">
                 <div class="indicator">
                   <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9" /></svg>
-                  <span class="badge badge-xs badge-primary indicator-item"></span>
+                  <span class="badge badge-xs badge-info indicator-item"></span>
                 </div>
               </button>
             </div>
@@ -45,9 +47,9 @@
     <!-- banner code start here  -->
     <div>
       <div class="carousel w-full h-[90vh]">
-        <div id="slide1" class="carousel-item relative w-full bg-no-repeat bg-cover bg-center" style="background-image:linear-gradient(rgba(14, 13, 13, 0.466),rgba(0, 0, 0, 0.26)), url(./image-1/banner.jpg);">
+        <div id="slide1" class="carousel-item relative w-full bg-no-repeat bg-cover bg-center" style="background-image:linear-gradient(rgba(14, 13, 13, 0.466),rgba(0, 0, 0, 0.26)), url(./image/banner.jpg);">
           <div class="text-black text-center m-auto w-1/2">
-            <h1 class="lg:text-4xl md:text-4xl text-3xl font-semibold">Shoe Store</h1>
+            <h1 class="lg:text-4xl md:text-4xl text-3xl font-bold">Super Steps</h1>
             <p class="lg:text-lg md:text-lg text-sm mt-3 font-semibold">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab impedit modi ipsa perspiciatis voluptatum eligendi enim. Ex aliquam ullam perspiciatis? <br> adipisicing elit.</p>
             <button class="bg-white text-black font-semibold px-10 py-1 border-4 border-black hover:bg-black hover:text-white duration-300 rounded-md mt-5">Login</button>
           </div>
@@ -56,9 +58,9 @@
             <a href="#slide2" class="btn btn-circle">❯</a>
           </div>
         </div> 
-        <div id="slide2" class="carousel-item relative w-full bg-no-repeat bg-cover bg-center" style="background-image:linear-gradient(rgba(0, 0, 0, 0.432),rgba(0, 0, 0, 0.315)), url(./image-1/banner-2.avif);">
+        <div id="slide2" class="carousel-item relative w-full bg-no-repeat bg-cover bg-center" style="background-image:linear-gradient(rgba(0, 0, 0, 0.432),rgba(0, 0, 0, 0.315)), url(./image/banner-2.avif);">
           <div class="text-black my-auto lg:ml-[750px] md:ml-[60%] mx-auto lg:text-left md:text-left text-center lg:w-1/3 md:w-1/3 w-1/2">
-            <h1 class="lg:text-4xl md:text-3xl text-3xl font-semibold">Shoe Store</h1>
+            <h1 class="lg:text-4xl md:text-3xl text-3xl font-bold">Super Steps</h1>
             <p class="lg:text-lg md:text-base text-sm mt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab impedit modi ipsa perspiciatis voluptatum eligendi enim. Ex aliquam ullam perspiciatis?</p>
             <button class="bg-white text-black font-semibold px-10 py-1 border-4 border-black hover:bg-black hover:text-white duration-300 rounded-md mt-5">Login</button>
           </div>
@@ -67,9 +69,9 @@
             <a href="#slide3" class="btn btn-circle">❯</a>
           </div>
         </div> 
-        <div id="slide3" class="carousel-item relative w-full bg-no-repeat bg-cover bg-center" style="background-image:linear-gradient(rgba(14, 13, 13, 0.384),rgba(0, 0, 0, 0.205)), url(./image-1/banner-4.jpg);">
+        <div id="slide3" class="carousel-item relative w-full bg-no-repeat bg-cover bg-center" style="background-image:linear-gradient(rgba(14, 13, 13, 0.384),rgba(0, 0, 0, 0.205)), url(./image/banner-4.jpg);">
           <div class="text-black my-auto lg:ml-28 md:ml-[15%] mx-auto lg:w-2/5 md:w-2/5 w-1/2 lg:text-left md:text-left text-center">
-            <h1 class="lg:text-4xl md:text-4xl text-3xl font-semibold">Shoe Store</h1>
+            <h1 class="lg:text-4xl md:text-4xl text-3xl font-bold">Super Steps</h1>
             <p class="lg:text-lg md:text-lg text-sm mt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab impedit modi ipsa perspiciatis voluptatum eligendi enim. Ex aliquam ullam perspiciatis?</p>
             <button class="bg-white text-black font-semibold px-10 py-1 border-4 border-black hover:bg-black hover:text-white duration-300 rounded-md mt-5">Login</button>
           </div>
@@ -78,9 +80,9 @@
             <a href="#slide4" class="btn btn-circle">❯</a>
           </div>
         </div> 
-        <div id="slide4" class="carousel-item relative w-full bg-no-repeat bg-cover bg-center" style="background-image:linear-gradient(rgba(14, 13, 13, 0.384),rgba(224, 221, 221, 0.171)), url(./image-1/banner-5.jpg!sw800);">
+        <div id="slide4" class="carousel-item relative w-full bg-no-repeat bg-cover bg-center" style="background-image:linear-gradient(rgba(14, 13, 13, 0.384),rgba(224, 221, 221, 0.171)), url(./image/banner-5.jpg!sw800);">
           <div class="text-black my-auto lg:ml-[50%] md:ml-[53%] mx-auto lg:w-2/5 md:w-2/5 w-1/2 lg:text-left md:text-left text-center">
-            <h1 class="lg:text-4xl md:text-3xl text-3xl font-semibold">Shoe Store</h1>
+            <h1 class="lg:text-4xl md:text-3xl text-3xl font-bold">Super Steps</h1>
             <p class="lg:text-lg md:text-base text-sm mt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab impedit modi ipsa perspiciatis voluptatum eligendi enim. Ex aliquam ullam perspiciatis?</p>
             <button class="bg-white text-black font-semibold px-10 py-1 border-4 border-black hover:bg-black hover:text-white duration-300 rounded-md mt-5">Login</button>
           </div>
@@ -94,15 +96,94 @@
    </header>
    <main>
     <!-- first section code satrt here -->
-    <section class="bg-black">
+    <section class="bg-black text-white">
      <div class="container mx-auto">
-      <div class="">
-        <div class=""></div>
+      <div class="grid lg:grid-cols-6 md:grid-cols-3 grid-cols-1 gap-6 py-10 items-center justify-center lg:mx-0 mx-4">
+        <!-- card-1  -->
+        <div class=" border-[1px] border-gray-500 flex items-center space-x-3 py-11 px-5">
+          <i class="bg-orange-600 px-2 py-1 text-xl rounded-full border-orange-600 border-4 hover:border-[#ffffff86] duration-200 fa-solid fa-bolt"></i>
+          <h4>Play Video</h4>
+        </div>
+        <!-- card-2 -->
+        <div class=" border-[1px] border-gray-500 py-1 px-5">
+          <h2>01</h2>
+          <h3 class="font-semibold text-lg pb-1">Trendmark</h3>
+          <p class="font-light">Sneakers 2022 Limited Edition</p>
+          <i class="fa-solid fa-arrow-right-long"></i>
+        </div>
+        <!-- card-3 -->
+        <div class=" border-[1px] border-gray-500 py-1 px-5">
+          <h2>02</h2>
+          <h3 class="font-semibold text-lg pb-1">Trendmark</h3>
+          <p class="font-light">Sneakers 2022 Limited Edition</p>
+          <i class="fa-solid fa-arrow-right-long"></i>
+        </div>
+        <!-- card-4 -->
+        <div class=" border-[1px] border-gray-500 py-1 px-5">
+          <h2>03</h2>
+          <h3 class="font-semibold text-lg pb-1">Trendmark</h3>
+          <p class="font-light">Sneakers 2022 Limited Edition</p>
+          <i class="fa-solid fa-arrow-right-long"></i>
+        </div>
+      <!-- card-5 -->
+      <div class=" border-[1px] border-gray-500 py-1 px-5">
+        <h2>04</h2>
+        <h3 class="font-semibold text-lg pb-1">Trendmark</h3>
+        <p class="font-light">Sneakers 2022 Limited Edition</p>
+        <i class="fa-solid fa-arrow-right-long"></i>
+      </div>
+      <!-- card-6 -->
+      <div class=" border-[1px] border-gray-500 py-1 px-5">
+        <h2>05</h2>
+        <h3 class="font-semibold text-lg pb-1">Trendmark</h3>
+        <p class="font-light">Sneakers 2022 Limited Edition</p>
+        <i class="fa-solid fa-arrow-right-long"></i>
+      </div>
       </div>
      </div>
     </section>
     <!-- second section code satrt here -->
-    
+    <section class="container mx-auto mb-14">
+      <div class="flex lg:flex-row md:flex-row flex-col-reverse justify-center lg:gap-x-20 md:gap-x-7 gap-x-0 mx-4 lg:mt-0 md:mt-0 mt-12">
+        <div class="lg:mt-6 mt-0">
+          <div>
+            <img class="lg:w-72 md:w-44 w-72" src="./image/essen-2.png" alt="">
+          </div>
+          <div class="lg:w-[400px] w-[90%]">
+            <h2 class="lg:text-4xl md:text-2xl text-3xl font-bold">Bacca Bucci Boys or Girls Essential</h2>
+            <h4 class="mt-3 font-bold lg:text-lg md:text-base text-lg">Sneakers 2022 Limited Edition.</h4>
+            <p class="font-semibold lg:text-base md:text-sm text-base text-gray-700 my-3">Lorem ipsum dolor sit amet consectetur,hgjuy adipisicing elit. Dolore tenetur atque minus enim ....</p>
+            <div class="flex flex-row space-x-5">
+              <div>
+                <img class="lg:w-20 md:w-14 w-20" src="./image/essen-small-1-200x200.png" alt="">
+              </div>
+              <div>
+                <img class="lg:w-20 md:w-14 w-20" src="./image/essen-small-2-200x200.png" alt="">
+              </div>
+              <div>
+                <img class="lg:w-20 md:w-14 w-20" src="./image/essen-small-3-200x200.png" alt="">
+              </div>
+            </div>
+            <h4><span class="text-red-700 text-2xl">*</span>Size: 26 30</h4>
+            <h4><span class="text-red-700 text-2xl">*</span>Color: 
+              <i class="text-blue-600 fa-solid fa-circle"></i> 
+              <i class=" text-red-600 fa-solid fa-circle"></i></h4>
+              <div class="flex flex-row items-center justify-between lg:mt-7 md:mt-4 mt-7">
+                <div>
+                  <h2 class="lg:text-3xl md:text-2xl text-2xl font-bold hover:text-red-700 cursor-pointer">$123.00 </h2>
+                  <p class="line-through text-gray-500 font-semibold">$1.00</p>
+                </div>
+                <div>
+                  <button class="bg-orange-600 hover:bg-black text-white lg:px-5 px-3 lg:py-3 py-1 rounded-3xl font-semibold lg:text-sm text-xs">ADD TO CART <i class="p-[5px] text-[14px] ml-2 bg-[#ffffff3a] rounded-full fa-solid fa-bag-shopping"></i></button>
+                </div>
+              </div>
+          </div>
+        </div>
+        <div>
+          <img src="./image/essence.jpg" alt="">
+        </div>
+      </div>
+    </section>
    </main>
 </body>
 </html>
