--- a/index.html
+++ b/index.html
@@ -142,26 +142,33 @@
       </div>
      </div>
     </section>
-    <!-- second section code satrt here -->
-    <section class="container mx-auto mb-14">
+    <!-- essential section code satrt here -->
+    <section class="container mx-auto w-full">
       <div class="flex lg:flex-row md:flex-row flex-col-reverse justify-center lg:gap-x-20 md:gap-x-7 gap-x-0 mx-4 lg:mt-0 md:mt-0 mt-12">
         <div class="lg:mt-6 mt-0">
           <div>
-            <img class="lg:w-72 md:w-44 w-72" src="./image/essen-2.png" alt="">
+            <img class="lg:w-72 md:w-44 w-72" src="./image/ess-big-1.avif" alt="">
+          </div>
+          <div class="">
+            <i class="fa-regular fa-star"></i>
+            <i class="fa-regular fa-star"></i>
+            <i class="fa-regular fa-star"></i>
+            <i class="fa-regular fa-star"></i>
+            <i class="fa-regular fa-star"></i>
           </div>
           <div class="lg:w-[400px] w-[90%]">
             <h2 class="lg:text-4xl md:text-2xl text-3xl font-bold">Bacca Bucci Boys or Girls Essential</h2>
             <h4 class="mt-3 font-bold lg:text-lg md:text-base text-lg">Sneakers 2022 Limited Edition.</h4>
-            <p class="font-semibold lg:text-base md:text-sm text-base text-gray-700 my-3">Lorem ipsum dolor sit amet consectetur,hgjuy adipisicing elit. Dolore tenetur atque minus enim ....</p>
-            <div class="flex flex-row space-x-5">
+            <p class="font-semibold lg:text-base md:text-sm text-base text-gray-700 my-3">Elevate your fashion game with our exquisite collection of shoes. Crafted with precision and attention to detail, these shoes combine comfort and elegance to give...</p>
+            <div class="flex flex-row space-x-5 mt-8">
               <div>
-                <img class="lg:w-20 md:w-14 w-20" src="./image/essen-small-1-200x200.png" alt="">
+                <img class="lg:w-20 md:w-14 w-20" src="./image/essen-02.png" alt="">
               </div>
               <div>
-                <img class="lg:w-20 md:w-14 w-20" src="./image/essen-small-2-200x200.png" alt="">
+                <img class="lg:w-20 md:w-14 w-20" src="./image/ess-1.png" alt="">
               </div>
               <div>
-                <img class="lg:w-20 md:w-14 w-20" src="./image/essen-small-3-200x200.png" alt="">
+                <img class="lg:w-20 md:w-14 w-20" src="./image/ess-2.png" alt="">
               </div>
             </div>
             <h4><span class="text-red-700 text-2xl">*</span>Size: 26 30</h4>
@@ -174,13 +181,218 @@
                   <p class="line-through text-gray-500 font-semibold">$1.00</p>
                 </div>
                 <div>
-                  <button class="bg-orange-600 hover:bg-black text-white lg:px-5 px-3 lg:py-3 py-1 rounded-3xl font-semibold lg:text-sm text-xs">ADD TO CART <i class="p-[5px] text-[14px] ml-2 bg-[#ffffff3a] rounded-full fa-solid fa-bag-shopping"></i></button>
+                  <button class="bg-orange-600 hover:bg-black text-white lg:px-5 px-3 lg:py-2 py-1 rounded-3xl font-semibold lg:text-sm text-xs">ADD TO CART <i class="p-[5px] text-[14px] ml-2 bg-[#ffffff3a] rounded-full fa-solid fa-bag-shopping"></i></button>
                 </div>
               </div>
           </div>
         </div>
         <div>
           <img src="./image/essence.jpg" alt="">
+        </div>
+      </div>
+    </section>
+    <!-- essential section code satrt here -->
+    <section class="w-full bg-no-repeat pt-10 my-20" style="background-image: url(./image/leftt.png);">
+      <div class="container mx-auto w-full">
+       <div class="lg:mx-0 mx-4">
+        <div class="mb-9">
+          <h4 class="font-semibold">ALL PRODUCTS</h4>
+          <h2 class="font-semibold text-5xl text-black mt-2"><span class="font-bold">All the</span> Sneakers</h2>
+        </div>
+        <div class="grid lg:grid-cols-3 md:grid-cols-2 grid-cols-1 items-center lg:gap-20 gap-12 text-black mx-4">
+          <!-- card-1  -->
+          <div class="flex flex-row items-center space-x-4">
+            <div class="">
+              <h3 class="font-bold text-base">Literide Perforated...</h3>
+              <div class="flex items-end space-x-3 my-1">
+                  <div>
+                    <h3 class="text-sm font-semibold">AVAILABLE <br> SIZES:</h3>
+                  </div>
+                 <div class="flex flex-row">
+                  <button class="bg-gray-300 p-1 rounded-md text-sm font-semibold">36</button>
+                  <button class="bg-gray-300 p-1 rounded-md text-sm font-semibold">40</button>
+                 </div>
+              </div>
+              <h2 class="text-2xl font-bold">659.00 <span class="text-xs">USD</span></h2>
+              <div class="space-x-1 text-base my-2">
+                <i class="fa-regular fa-heart"></i>
+                <i class="fa-solid fa-right-left"></i>
+                <i class="fa-regular fa-eye"></i>
+              </div>
+              <button class="bg-red-300 text-white text-sm cursor-not-allowed px-3 py-[6px] rounded-3xl mt-2">SOLD OUT <i class="p-2 text-[10px] bg-[#ffffff3a] rounded-full fa-solid fa-cart-shopping"></i></button>
+            </div>
+            <div>
+              <!-- icon  -->
+              <div class="text-sm mb-3">
+                <i class="fa-regular fa-star"></i>
+                <i class="fa-regular fa-star"></i>
+                <i class="fa-regular fa-star"></i>
+                <i class="fa-regular fa-star"></i>
+                <i class="fa-regular fa-star"></i>
+              </div>
+              <!-- img  -->
+              <div>
+                <img class="w-48" src="./image/sneakers-2.webp" alt="">
+              </div>
+            </div>
+          </div>
+          <!-- card-2  -->
+          <div class="flex flex-row items-center space-x-4">
+            <div>
+              <h3 class="font-bold text-base">Literide Perforated...</h3>
+              <div class="flex items-end space-x-3 my-1">
+                  <div>
+                    <h3 class="text-sm font-semibold">AVAILABLE <br> SIZES:</h3>
+                  </div>
+                 <div class="flex flex-row">
+                  <button class="bg-gray-300 p-1 rounded-md text-sm font-semibold">36</button>
+                  <button class="bg-gray-300 p-1 rounded-md text-sm font-semibold">40</button>
+                 </div>
+              </div>
+              <h2 class="text-2xl font-bold">659.00 <span class="text-xs">USD</span></h2>
+              <div class="space-x-1 text-base my-2">
+                <i class="fa-regular fa-heart"></i>
+                <i class="fa-solid fa-right-left"></i>
+                <i class="fa-regular fa-eye"></i>
+              </div>
+              <button class="bg-orange-600 hover:bg-black text-white text-sm px-3 py-[6px] rounded-3xl mt-2">ADD TO CART <i class="p-2 text-[10px] bg-[#ffffff3a] rounded-full lg:block md:block hidden fa-solid fa-cart-shopping"></i></button>
+            </div>
+            <div>
+              <!-- icon  -->
+              <div class="text-sm mb-3">
+                <i class="fa-regular fa-star"></i>
+                <i class="fa-regular fa-star"></i>
+                <i class="fa-regular fa-star"></i>
+                <i class="fa-regular fa-star"></i>
+                <i class="fa-regular fa-star"></i>
+              </div>
+              <!-- img  -->
+              <div>
+                <img class="w-48" src="./image/sneakers-1.webp" alt="">
+              </div>
+            </div>
+          </div>
+          <!-- card-3 -->
+          <div class="flex flex-row items-center space-x-4">
+            <div>
+              <h3 class="font-bold text-base">Literide Perforated...</h3>
+              <div class="flex items-end space-x-3 my-1">
+                  <div>
+                    <h3 class="text-sm font-semibold">AVAILABLE <br> SIZES:</h3>
+                  </div>
+                 <div class="flex flex-row">
+                  <button class="bg-gray-300 p-1 rounded-md text-sm font-semibold">36</button>
+                  <button class="bg-gray-300 p-1 rounded-md text-sm font-semibold">40</button>
+                 </div>
+              </div>
+              <h2 class="text-2xl font-bold">659.00 <span class="text-xs">USD</span></h2>
+              <div class="space-x-1 text-base my-2">
+                <i class="fa-regular fa-heart"></i>
+                <i class="fa-solid fa-right-left"></i>
+                <i class="fa-regular fa-eye"></i>
+              </div>
+              <button class="bg-orange-600 hover:bg-black text-white text-sm px-3 py-[6px] rounded-3xl mt-2 ">ADD TO CART<i class="p-2 text-[10px] bg-[#ffffff3a] rounded-full lg:block md:block hidden fa-solid fa-cart-shopping"></i></button>
+            </div>
+            <div>
+              <!-- icon  -->
+              <div class="text-sm mb-3">
+                <i class="fa-regular fa-star"></i>
+                <i class="fa-regular fa-star"></i>
+                <i class="fa-regular fa-star"></i>
+                <i class="fa-regular fa-star"></i>
+                <i class="fa-regular fa-star"></i>
+              </div>
+              <!-- img  -->
+              <div>
+                <img class="w-48" src="./image/sneakers-03.png" alt="">
+              </div>
+            </div>
+          </div>
+        </div>
+       </div>
+      </div>
+    </section>
+    <!-- bestsellers section code start here -->
+    <section class="bg-no-repeat bg-right-top bg-black" style="background-image: url(./image/rightt.avif);">
+      <div class="container mx-auto w-full py-12 lg:px-0 px-4">
+        <div class="flex flex-row justify-between items-center text-white">
+          <h1 class="lg:text-8xl md:text-4xl text-5xl font-thin"><span class="font-bold">Best</span>sellers</h1>
+          <button class="text-xs border-white border-[1px] px-3 py-2 rounded-full lg:block md:block hidden">SHOW MORE <i class="bg-white text-black p-1 ml-2 rounded-full fa-solid fa-arrow-right-long"></i></button>
+        </div>
+        <div>
+          <ul class="flex flex-row space-x-7 mt-6 text-white">
+            <li class="hover:underline underline-offset-8 cursor-pointer ">MAN</li>
+            <li class="hover:underline underline-offset-8 cursor-pointer ">WOMEN</li>
+            <li class="hover:underline underline-offset-8 cursor-pointer ">KIDS</li>
+            <li class="hover:underline underline-offset-8 cursor-pointer lg:block md:block hidden">CUSTOMIZE</li>
+          </ul>
+        </div>
+        <!-- card-parent  -->
+        <div class="flex lg:flex-row md:flex-row flex-col justify-center lg:space-x-28 md:space-x-8 space-x-0 lg:space-y-0 md:space-y-0 space-y-9">
+          <!-- card-1  -->
+          <div class="">
+            <div class="-mb-28">
+              <img class="w-[500px]" src="./image/best-sneakers-1.webp" alt="">
+            </div>
+            <!-- icons and text button parent  -->
+              <div class="bg-white pt-24 px-6 pb-7">
+                  <!-- icon div-1  -->
+                <div class="space-x-1 text-gray-800 text-sm">
+                  <i class="bg-[#00000049] p-1 rounded-full fa-regular fa-heart"></i>
+                  <i class="bg-[#00000049] p-1 rounded-full fa-solid fa-right-left"></i>
+                  <i class="bg-[#00000049] p-1 rounded-full fa-regular fa-eye"></i>
+                </div>
+                <!-- icon div-2  -->
+                <div class="my-3 text-gray-400 text-sm">
+                  <i class="fa-regular fa-star"></i>
+                  <i class="fa-regular fa-star"></i>
+                  <i class="fa-regular fa-star"></i>
+                  <i class="fa-regular fa-star"></i>
+                  <i class="fa-regular fa-star"></i>
+                </div>
+                <!-- text  -->
+                <div class="text-black">
+                  <h2 class="font-bold text-2xl">Sprit Yoga Softy Set</h2>
+                  <h4 class="text-base mt-2">Sneakers 2022 Limited Edition.</h4>
+                  <div class="flex lg:flex-row flex-col justify-between lg:items-center items-start">
+                    <h3 class="lg:text-3xl md:text-3xl text-xl font-bold mt-3">500.00<span class="text-sm font-medium">USD</span> <span class="text-xs text-red-500 font-medium line-through">600.00 USD</span> </h3>
+                    <button class="bg-orange-600 hover:bg-black text-white lg:px-5 px-3 lg:py-2 py-1 rounded-3xl font-semibold lg:text-sm text-xs lg:mt-0 md:mt-0 mt-2">ADD TO CART <i class="p-[5px] text-[14px] ml-2 bg-[#ffffff3a] rounded-full fa-solid fa-bag-shopping"></i></button>
+                  </div>
+                </div>
+              </div>
+          </div>
+          <!-- card-2  -->
+          <div class="">
+            <div class="-mb-28">
+              <img class="w-[500px]" src="./image/best-sneakers-2.webp" alt="">
+            </div>
+            <!-- icons and text button parent  -->
+              <div class="bg-white pt-24 px-6 pb-7">
+                  <!-- icon div-1  -->
+                <div class="space-x-1 text-gray-800 text-sm">
+                  <i class="bg-[#00000049] p-1 rounded-full fa-regular fa-heart"></i>
+                  <i class="bg-[#00000049] p-1 rounded-full fa-solid fa-right-left"></i>
+                  <i class="bg-[#00000049] p-1 rounded-full fa-regular fa-eye"></i>
+                </div>
+                <!-- icon div-2  -->
+                <div class="my-3 text-gray-400 text-sm">
+                  <i class="fa-regular fa-star"></i>
+                  <i class="fa-regular fa-star"></i>
+                  <i class="fa-regular fa-star"></i>
+                  <i class="fa-regular fa-star"></i>
+                  <i class="fa-regular fa-star"></i>
+                </div>
+                <!-- text  -->
+                <div class="text-black">
+                  <h2 class="font-bold text-2xl">Sprit Yoga Softy Set</h2>
+                  <h4 class="text-base mt-2">Sneakers 2022 Limited Edition.</h4>
+                  <div class="flex lg:flex-row flex-col justify-between lg:items-center items-start">
+                    <h3 class="text-3xl font-bold">500.00<span class="text-sm font-medium">USD</span> <span class="text-xs text-red-500 font-medium line-through">600.00 USD</span> </h3>
+                    <button class="bg-orange-600 hover:bg-black text-white lg:px-5 px-3 lg:py-2 py-1 rounded-3xl font-semibold lg:text-sm text-xs lg:mt-0 mt-2">ADD TO CART <i class="p-[5px] text-[14px] ml-2 bg-[#ffffff3a] rounded-full fa-solid fa-bag-shopping"></i></button>
+                  </div>
+                </div>
+              </div>
+          </div>
         </div>
       </div>
     </section>
